1) Added search activity 2) Implemented Searching

--- a/Read It/app/src/main/res/values/strings.xml
+++ b/Read It/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Read It</string>
+    
+    
+    //data for spinner
+    <string-array name="order_by_array">
+        <item>relevance</item>
+        <item>newest</item>
+        <item>oldest</item>
+    </string-array>
 </resources>
